Add spacing between edit modal form and buttons

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -561,6 +561,9 @@ output {
 .form-group:last-child {
   margin-bottom: 0; }
 
+.top-buffer {
+  margin-top: 15px; }
+
 input[type="date"] {
   line-height: 35px; }
 
