--- a/views/edit.tt
+++ b/views/edit.tt
@@ -790,7 +790,7 @@
 [% END %]
 
 [% BLOCK curval_typeahead_column %]
-    <input type="hidden" name="[% field %]" id="[% dispcol.id %]_value" value="[% editvalue.id %]">
+    <input type="hidden" name="[% field %]" id="[% dispcol.id %]_value" value="[% editvalue.autocomplete_value | html %]">
     <input type="text" class="form-control" id="[% dispcol.id %]" autocomplete="off"
         name="[% field %]_typeahead" value="[% IF record %][% editvalue.value | html %][% END %]" [% readonly %] >
     [% typeaheads.push({id = dispcol.id, field = field }) %]
