--- a/views/edit.tt
+++ b/views/edit.tt
@@ -555,6 +555,7 @@
     [% dispcol = col %]
     [% field = 'field' _ dispcol.id %]
     [% colid = dispcol.id %]
+    [% readonly = dispcol.readonly %]
 
     [% IF existing %]
         [% oldvalue = existing.fields.$colid.html %] [%# All value already entity-encoded %]
@@ -771,22 +772,6 @@
     [% UNLESS dispcol.multivalue AND dispcol.has_multivalue_plus %]
         [% editvalue = 0 %]
     [% END %]
-[% END %]
-
-[% BLOCK do_col %]
-
-    [%# Prevent recursive loops %]
-    [% cid = col.id %]
-    [% NEXT IF columns_done.$cid %]
-
-    [%# First display the actual column, only if it doesn't depend on others,
-        or it's meant to be displayed because we're within the parent %]
-    [% IF !columns_done.$cid %]
-        [% dispcol = col.column %]
-        [% readonly = col.readonly %]
-        [% PROCESS showcol %]
-    [% END %]
-
 [% END %]
 
 [% BLOCK curval_typeahead_column %]
