--- a/views/snippets/navigation.tt
+++ b/views/snippets/navigation.tt
@@ -133,7 +133,7 @@
     <li class="dropdown">
         <button type="button" id="admin-menu" class="dropdown-toggle"
             data-toggle="dropdown" aria-controls="admin-menu-options" aria-expanded="false" aria-haspopup="true">
-            <span>Users</span>
+            <span class="user-editor">Users</span>
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" aria-labelledby="admin-menu" id="admin-menu-options">
