--- a/sass/_permissions.scss
+++ b/sass/_permissions.scss
@@ -96,7 +96,7 @@
     background-color: #eee;
 }
 
-@each $column-type in calc rag tree enum file curval string date daterange person autocur intgr {
+@each $column-type in calc rag tree enum file curval string date daterange person autocur intgr filval {
     #manage-fields.column-type-#{$column-type} .field-options.#{$column-type} { display: block; }
 }
 
