--- a/views/data.tt
+++ b/views/data.tt
@@ -144,17 +144,19 @@
                     <div class="btn-group">
                         <a class="btn btn-default" data-toggle="modal" data-target="#modal_timeline" role="button">Timeline options...</a>
                     </div>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_action">
-                                Download <span class="caret"></span>
-                        </button>
-                        <ul id="menu_action" class="dropdown-menu" role="menu">
-                            <li role="presentation">
-                                <a role="menuitem" href="/[% layout.identifier %]/data?png=1">Download as PNG image</a>
-                                <a role="menuitem" href="" data-toggle="modal" data-target="#modal_pdf">Download as PDF document...</a>
-                            </li>
-                        </ul>
-                    </div>
+                    [% UNLESS layout.no_download_pdf %]
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_action">
+                                    Download <span class="caret"></span>
+                            </button>
+                            <ul id="menu_action" class="dropdown-menu" role="menu">
+                                <li role="presentation">
+                                    <a role="menuitem" href="/[% layout.identifier %]/data?png=1">Download as PNG image</a>
+                                    <a role="menuitem" href="" data-toggle="modal" data-target="#modal_pdf">Download as PDF document...</a>
+                                </li>
+                            </ul>
+                        </div>
+                    [% END %]
                 [% ELSIF viewtype == "globe" %]
                     <div class="btn-group">
                         <a class="btn btn-default" data-toggle="modal" data-target="#modal_globe" role="button">Globe options...</a>
