--- a/views/layout.tt
+++ b/views/layout.tt
@@ -399,18 +399,17 @@
             </div>
         </div>
         <div class="form-group">
-            <label>Status updates:</label>
-            <div class="radio">
-                <label>
-                    <input type="radio" name="no_cache_update_calc" value="0">Update all existing values immediately
-                        (may take a long time for a lot of records)
-                </label>
-            </div>
-
+            <label>Value updates:</label>
             <div class="radio">
                 <label>
                     <input type="radio" name="no_cache_update_calc" value="1" checked>Do not immediately update all existing values
                         (values will be updated overnight instead)
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="no_cache_update_calc" value="0">Force update all values immediately
+                        (may take a long time for a lot of records)
                 </label>
             </div>
         </div>
@@ -436,17 +435,17 @@
             </div>
         </div>
         <div class="form-group">
-            <label>Status updates:</label>
-            <div class="radio">
-                <label>
-                    <input type="radio" name="no_cache_update_rag" value="0">Update all existing values immediately
-                        (may take a long time for a lot of records)
-                </label>
-            </div>
+            <label>Value updates:</label>
             <div class="radio">
                 <label>
                     <input type="radio" name="no_cache_update_rag" value="1" checked>Do not immediately update all existing values
                         (values will be updated overnight instead)
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="no_cache_update_rag" value="0">Force update all values immediately
+                        (may take a long time for a lot of records)
                 </label>
             </div>
         </div>
