Show correct field options after error on creating new field

--- a/views/layout.tt
+++ b/views/layout.tt
@@ -833,7 +833,7 @@
                     } else {
                         $('#checkbox-multivalue').show();
                     }
-                });
+                }).trigger("change");
             });
     [% END %]
     [% END %]';
