--- a/views/table.tt
+++ b/views/table.tt
@@ -126,7 +126,7 @@
                 <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
             </div>
             <div class="modal-body">
-                <p>Are you sure you want to delete this table? Tables must have no fields before they can be deleted.</p>
+                <p>Are you sure you want to delete this table? Tables must have no fields or records before they can be deleted.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
