Add feature to disable personal details as user-editable

--- a/views/system.tt
+++ b/views/system.tt
@@ -3,6 +3,7 @@
     <div class="col-md-12">
         <form role="form" method="post">
             <input type="hidden" name="csrf_token" value="[% csrf_token %]">
+
             <h3>Welcome emails</h3>
             <div class="form-group">
                 <label for="name">System name:</label>
@@ -16,6 +17,20 @@
                 <label for="email_welcome_text">Welcome email text:</label>
                 <textarea class="form-control" name="email_welcome_text" id="email_welcome_text" rows="5">[% instance.email_welcome_text | html %]</textarea>
             </div>
+
+            <h3>User-editable personal details</h3>
+            <label>
+                Allow users to edit the following details of their account:
+            </label>
+            [% FOREACH field in instance.user_fields %]
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" name="user_editable" value="[% field.name | html %]"
+                            [% IF field.editable %]checked[% END %]>[% field.description | html %]
+                    </label>
+                </div>
+            [% END %]
+
             <button type="submit" id="update" name="update" value="update" class="btn btn-primary">Save</button>
             <a href="/" class="btn btn-default">Cancel</a>
         </form>
