--- a/views/edit.tt
+++ b/views/edit.tt
@@ -919,7 +919,8 @@
     <div class="select-widget [% IF readonly %]select-widget--read-only[% END %] multi"
         [% IF column.has_subvals %]
             data-field="[% field %]"
-            data-filter-endpoint="/[% layout.identifier _ "/api/field/values/" _ column.id %]?submission-token=[% submission_token %]"
+            data-filter-endpoint="/[% layout.identifier _ "/api/field/values/" _ column.id %]"
+            data-submission-token="[% submission_token %]"
             data-filter-fields='[% column.data_filter_fields %]'
         [% END %]
         >
